--- a/translations/en.txt
+++ b/translations/en.txt
@@ -1,7 +1,65 @@
-btnTutorial = Tutorial
-btnCharts = Horoscopes
-btnCycles = Cycles
-btnCalculators = Calculators
-btnCounting = Counting
-btnChartsNew = New
-btnChartsSearch = Search
+####################################
+# English texts
+####################################
+# g_ general
+# m_ menu
+# r_as_ references aspects
+# r_ay_ references ayanamshas
+# r_cp_ references celestial points
+# r_cs_ references coordinate systems
+# r_hs_ references houses
+# r_op_ references observer positions
+# r_sg_ references signs
+# r_tz_ references timezones
+# v_ views
+####################################
+
+m_analysis = Analysis
+m_analysis_aspects = Aspects
+m_analysis_decl_diagram = Declination diagram
+m_analysis_decl_long_equiv = Longitude equivalent
+m_analysis_decl_parallels = Parallels
+m_analysis_decl_strip = Declination strip
+m_analysis_declinations = Declinations
+m_analysis_harmonics = Harmonics
+m_analysis_midpoints = Midpoints
+m_calc_datetime = Date/time from Julian day
+m_calc_jd = Julian day from date/timezones
+m_calc_obliquity = Obliquity
+m_calculations = Calcuations
+m_charts = Charts
+m_charts_import = Import charts
+m_charts_new = New chart
+m_charts_search = Search chart
+m_cycle_delete = Delete current chart
+m_cycle_new = New cycle
+m_cycle_search = Search cycle
+m_cycles = Cycles
+m_general = General
+m_general_config = Configuration
+m_general_settings = Settings
+m_help = Help
+m_help_about = About Enigma 
+m_help_user_manual = User manual (on-line)
+m_help_whats_new = What's new
+m_lang_dutch = Dutch / Nederlands
+m_lang_eng = English
+m_lang_french = French / Français
+m_lang_german = German / Deutsch
+m_language = Language
+m_prog_new_event = New event
+m_prog_oob_calendar = Out of Bounds calendar
+m_prog_prim_dir = Primary directions
+m_prog_search_event = Search event
+m_prog_sec_dir = Secundary directions
+m_prog_sym_dir = Symbolic directions
+m_prog_transits = Transits
+m_progressive = Progressive
+m_res_data_add = Add research data
+m_res_data_available = Available data
+m_res_data_remove = Remove data
+m_res_proj_delete = Delete project
+m_res_proj_new = New project
+m_res_proj_search = Search project
+m_research_data = Research data
+m_research_projects = Research projects
