--- a/translations/nl.txt
+++ b/translations/nl.txt
@@ -1,7 +1,65 @@
-btnTutorial = Handleiding
-btnCharts = Horoscopen
-btnCycles = Cycli
-btnCalculators = Calculators
-btnCounting = Tellingen
-btnChartsNew = Nieuw
-btnChartsSearch = Zoeken
+####################################
+# Dutch texts
+####################################
+# g_ general
+# m_ menu
+# r_as_ references aspects
+# r_ay_ references ayanamshas
+# r_cp_ references celestial points
+# r_cs_ references coordinate systems
+# r_hs_ references houses
+# r_op_ references observer positions
+# r_sg_ references signs
+# r_tz_ references timezones
+# v_ views
+####################################
+
+m_analysis = Analyse
+m_analysis_aspects = Aspecten
+m_analysis_decl_diagram = Declinatie diagram
+m_analysis_decl_long_equiv = Lengte equivalent
+m_analysis_decl_parallels = Parallellen
+m_analysis_decl_strip = Declinatie strip
+m_analysis_declinations = Declinaties
+m_analysis_harmonics = Harmonics
+m_analysis_midpoints = Half sommen
+m_calc_datetime = Datum / tijd via jd
+m_calc_jd = Julian day number
+m_calc_obliquity = Helling aardas
+m_calculations = Berekeningen
+m_charts = Horoscopen
+m_charts_import = Importeer horoscopen
+m_charts_new = Nieuwe horoscoop
+m_charts_search = Zoek horoscoop
+m_cycle_delete = Cyclus verwijderen
+m_cycle_new = Nieuwe cyclus
+m_cycle_search = Zoek cyclus
+m_cycles = Cycli
+m_general = Algemeen
+m_general_config = Configurate
+m_general_settings = Instellingen
+m_help = Help
+m_help_about = Over Enigma
+m_help_user_manual = Gebruiksers handleiding
+m_help_whats_new = Wat is nieuw
+m_lang_dutch = Nederlands
+m_lang_eng = Engels / English
+m_lang_french = Frans / Français
+m_lang_german = Duits / Deutsch
+m_language = Taal
+m_prog_new_event = Nieuwe gebeurtenis
+m_prog_oob_calendar = Out of bounds kalender
+m_prog_prim_dir = Primaire directies
+m_prog_search_event = Zoek gebeurtenis
+m_prog_sec_dir = Secundaire directies
+m_prog_sym_dir = Symbolische directies
+m_prog_transits = Transits
+m_progressive = Progressief
+m_res_data_add = Data toevoegen
+m_res_data_available = Beschikbare data
+m_res_data_remove = Verwijder data 
+m_res_proj_delete = Verwijder project
+m_res_proj_new = Nieuw project
+m_res_proj_search = Zoek project
+m_research_data = Onderzoeksdata
+m_research_projects = Onderzoeksprojecten
