refactor: (frontend) menu now consists of several functions and has been moved to a separate file.

--- a/translations/en.txt
+++ b/translations/en.txt
@@ -57,7 +57,7 @@ m_prog_transits = Transits
 m_progressive = Progressive
 m_res_data_add = Add research data
 m_res_data_available = Available data
-m_res_data_remove = Remove data
+m_res_data_delete = Remove data
 m_res_proj_delete = Delete project
 m_res_proj_new = New project
 m_res_proj_search = Search project
