--- a/translations/nl.txt
+++ b/translations/nl.txt
@@ -57,7 +57,7 @@ m_prog_transits = Transits
 m_progressive = Progressief
 m_res_data_add = Data toevoegen
 m_res_data_available = Beschikbare data
-m_res_data_remove = Verwijder data 
+m_res_data_delete = Verwijder data
 m_res_proj_delete = Verwijder project
 m_res_proj_new = Nieuw project
 m_res_proj_search = Zoek project
