--- a/translations/nl.txt
+++ b/translations/nl.txt
@@ -69,6 +69,60 @@ m_res_proj_search = Zoek project
 m_research_data = Onderzoeksdata
 m_research_projects = Onderzoeksprojecten
 
+# References chart categories
+r_cc_female = Vrouw
+r_cc_male = Man
+r_cc_event = Gebeurtenis
+r_cc_horary = Uurhoek
+r_cc_election = Electie
+r_cc_other = Anders
+r_cc_unknown = Onbekend
+
+# References Rodden ratings
+r_rr_aa = Accuraat
+r_rr_a = Geciteerd
+r_rr_b = (Auto)biografie
+r_rr_c = Pas op, geen bron
+r_rr_dd = Vuile data
+r_rr_x = Geen geboortetijd
+r_rr_xx = Geen geboortedatum
+r_rr_unknown = Onbekend
+
+# References timezones
+r_tz_ut = +00:00: UT/Universele Tijd, GT Greenwich Tijd
+r_tz_cet = +01:00: CET/Centraal Europese Tijd
+r_tz_eet = +02:00: OET/Oost Europese Tijd
+r_tz_eat = +03:00: OAT/Oost Afrikaanse Tijd, TRT/Turkse Tijd
+r_tz_irst = +03:30: IRST/Iran Standaard Tijd
+r_tz_amt = +04:00: AMT/Armenië Tijd, MUT/Mauritius Tijd
+r_tz_aft = +04:30: AFT/Afghanistan Tijd
+r_tz_pkt = +05:00: PKT/Pakistan Standaard Tijdme, ORAT/Oral Tijd
+r_tz_ist = +05:30: IST/India Standaard Tijd
+r_tz_iot = +06:00: IOT/India Chagos Tijd, OMST/Omsk Tijd
+r_tz_mmt = +06:30: MMT/Myanmar Standaard Tijd
+r_tz_ict = +07:00: ICT/Indochina Tijd
+r_tz_wst = +08:00: WST/Westerse Standaard Tijd, CST/China Standaard Tijd
+r_tz_jst = +09:00: JST/Japanse Standaard Tijd
+r_tz_acst = +09:30: ACST/Australische Centrale Standaard Tijd
+r_tz_aest = +10:00: AEST/Australische Oosterse Standaard Tijd
+r_tz_lhst = +10:30: LHST/Lord Howe Standaard Tijd
+r_tz_nct = +11:00: NCT/Nieuw Caledonië Tijd
+r_tz_nzst = +12:00: NZST/Nieuw Zeeland Standaard Tijd
+r_tz_sst = -11:00: SST/Samoa Standaard Tijd
+r_tz_hast = -10:00: HAST/Hawaii-Aleoeten Standaard Tijd
+r_tz_mart = -09:30: MART/Marquesas Eilanden Tijd
+r_tz_akst = -09:00: AKST/Alaska Standaard Tijd
+r_tz_pst = -08:00: PST/Pacific Standaard Tijd
+r_tz_mst = -07:00: MST/Mountain Standaard Tijd
+r_tz_cst = -06:00: CST/Central Standaard Tijd
+r_tz_est = -05:00: EST/Eastern Standaard Tijd
+r_tz_ast = -04:00: AST Atlantische Standaard Tijd
+r_tz_nst = -03:30: NST/Newfoundland Standaard Tijd
+r_tz_brt = -03:00: BRT/Brazilië Tijd, ART/Argentinië Tijd
+r_tz_gst = -02:00: GST/Zuid Georgië Tijd
+r_tz_azot = -01:00: AZOT/Azoren Standaard Tijd
+r_tz_lmt = MPT: Middelbaar Plaatselijke Tijd
+
 #View calc jd
 v_calc_jd_title = Berekene het Juliaanse dagnummer
 v_calc_jd_date = Datum (jjjj/mm/dd)
@@ -77,6 +131,31 @@ v_calc_jd_calendar = Kalender
 v_calc_jd_result = Resultaat van de berekening
 v_calc_jd_error = Corrigeer s.v.p. de invoer
 v_calc_jd_btncalc = Bereken JD
+
+#View input radix
+v_input_radix_title = Gegevens nieuwe horoscoop
+v_input_radix_name = Naam of id
+v_innput_radix_description = Beschrijving
+v_input_radix_source = Bron
+v_input_radix_rating = Rating
+v_input_radix_catchart = Categorie
+v_input_radix_locname = Locatie
+v_input_radix_country = Land
+v_input_radix_map = Kaart
+v_input_radix_geolong = Geografische lengte (ggg:mm:ss)
+v_input_radix_geolongdire = Oost
+v_input_radix_geolongdirw = West
+v_input_radix_geolat = Geografische breedte (gg:mm:ss)
+v_input_radix_geolatdirn = Noord
+v_input_radix_geolatdirs = Zuid
+v_input_radix_date = Datum (jjjj/mm/dd)
+v_input_radix_calendar = Kalender
+v_input_radix_yearcount = Jaartelling
+v_input_radix_time = Tijd (uu:mm:ss)
+v_input_radix_timezone = Tijdzone
+v_input_radix_dst = Zomertijd
+v_input_radix_geolonglmt = Lengte voor MPT (ggg:mm:ss)
+v_input_radix_calc = Bereken horoscoop
 
 # View main
 v_main_language_changed = De taal is veranderd. Herstart Enigma om de nieuwe taal te gebruiken.
