--- a/translations/fr.txt
+++ b/translations/fr.txt
@@ -69,6 +69,12 @@ m_res_proj_search = Rechercher projet
 m_research_data = Données de recherche
 m_research_projects = Projets de recherche
 
+# References calendars
+r_cal_gregorian = Grégorien
+r_cal_julian_ce = Julian de notre ère
+r_cal_julian_bce = Julian avant notre ère
+r_cal_astronomical = Astronomique
+
 # References chart categories
 r_cc_female = Féminin
 r_cc_male = Masculin
@@ -79,13 +85,13 @@ r_cc_other = Autre
 r_cc_unknown = Inconnu
 
 # References Rodden ratings
-r_rr_aa = Précis
-r_rr_a = Cité
-r_rr_b = (Auto)biographie
-r_rr_c = Attention, pas de source
-r_rr_dd = Données non fiables
-r_rr_x = Pas d'heure de naissance
-r_rr_xx = Pas de date de naissance
+r_rr_aa = AA - Précis
+r_rr_a = A - Cité
+r_rr_b = B - (Auto)biographie
+r_rr_c = C - Attention, pas de source
+r_rr_dd = DD - Données non fiables
+r_rr_x = X - Pas d'heure de naissance
+r_rr_xx = XX - Pas de date de naissance
 r_rr_unknown = Inconnu
 
 # References timezones
@@ -142,19 +148,19 @@ v_input_radix_catchart = Catégorie
 v_input_radix_locname = Emplacement
 v_input_radix_country = Pays
 v_input_radix_map = Carte
-v_input_radix_geolong = Longitude géographique (ddd:mm:ss)
-v_input_radix_geolongdire = Est
-v_input_radix_geolongdirw = Ouest
-v_input_radix_geolat  = Latitude géographique (dd:mm:ss)
-v_input_radix_geolatdirn = Nord
-v_input_radix_geolatdirs = Sud
-v_input_radix_date = Date (aaaa/mm/jj)
+v_input_radix_geolong = Longitude géographique
+v_input_radix_geolong_placeholder = ddd:mm:ss e (o pour ouest)
+v_input_radix_geolat  = Latitude géographique
+v_input_radix_geolat_placeholder = dd:mm:ss n (s pour sud)
+v_input_radix_date = Date
+v_input_radix_date_placeholder = aaaa/mm/jj
 v_input_radix_calendar = Calendrier
 v_input_radix_yearcount = Ère
-v_input_radix_time = Heure (hh:mm:ss)
+v_input_radix_time = Heure
+v_input_radix_time_placeholder = hh:mm:ss
 v_input_radix_timezone = Fuseau horaire
 v_input_radix_dst = Heure d'été
-v_input_radix_geolonglmt = Longitude pour HML (ddd:mm:ss)
+v_input_radix_geolonglmt = Longitude pour HML
 v_input_radix_calc = Calculer l'horoscope
 
 # View main
