--- a/translations/ge.txt
+++ b/translations/ge.txt
@@ -69,6 +69,12 @@ m_res_proj_search = Projekt suchen
 m_research_data = Forschungsdaten
 m_research_projects = Forschungsprojekte
 
+# References calendars
+r_cal_gregorian = Gregorianisch
+r_cal_julian_ce = Julianisch n. Chr.
+r_cal_julian_bce = Julianisch v. Chr.
+r_cal_astronomical = Astronomisch
+
 # References chart categories
 r_cc_female = Frau
 r_cc_male = Mann
@@ -79,13 +85,13 @@ r_cc_other = Andere
 r_cc_unknown = Unbekannt
 
 # References Rodden ratings
-r_rr_aa = Genau
-r_rr_a = Zitiert
-r_rr_b = (Auto)biografie
-r_rr_c = Achtung, keine Quelle
-r_rr_dd = Schmutzige Daten
-r_rr_x = Keine Geburtszeit
-r_rr_xx = Keine Geburtsdatum
+r_rr_aa = AA - Genau
+r_rr_a = A - Zitiert
+r_rr_b = B - (Auto)biografie
+r_rr_c = C - Achtung, keine Quelle
+r_rr_dd = DD - Schmutzige Daten
+r_rr_x = X - Keine Geburtszeit
+r_rr_xx = XX - Keine Geburtsdatum
 r_rr_unknown = Unbekannt
 
 # References timezones
@@ -142,19 +148,19 @@ v_input_radix_catchart = Kategorie
 v_input_radix_locname = Standort
 v_input_radix_country = Land
 v_input_radix_map = Karte
-v_input_radix_geolong = Geographische Länge (ddd:mm:ss)
-v_input_radix_geolongdire = Ost
-v_input_radix_geolongdirw = West
-v_input_radix_geolat  = Geographische breite (dd:mm:ss)
-v_input_radix_geolatdirn = Nord
-v_input_radix_geolatdirs = Süd
-v_input_radix_date = Datum (jjjj/mm/tt)
+v_input_radix_geolong = Geographische Länge
+v_input_radix_geolong_placeholder = ggg:mm:ss e (w für West)
+v_input_radix_geolat  = Geographische breite
+v_input_radix_geolat_placeholder = gg:mm:ss n (s für Süd)
+v_input_radix_date = Datum
+v_input_radix_date_placeholder = jjjj/mm/tt
 v_input_radix_calendar = Kalender
 v_input_radix_yearcount = Zeitrechnung
-v_input_radix_time = Zeit (hh:mm:ss)
+v_input_radix_time = Zeit
+v_input_radix_time_placeholder = hh:mm:ss
 v_input_radix_timezone = Zeitzone
 v_input_radix_dst = Sommerzeit
-v_input_radix_geolonglmt = Länge für WOZ (ddd:mm:ss)
+v_input_radix_geolonglmt = Länge für WOZ
 v_input_radix_calc = Horoskop berechnen
 
 # View main
