feat: (frontend/backend) calculation of full chart completes without any panic.

--- a/locales/de.json
+++ b/locales/de.json
@@ -61,6 +61,84 @@
 "r_cc_election" : "Wahl horoskop",
 "r_cc_other" : "Andere",
 "r_cc_unknown" : "Unbekannt",
+"r_cp_sun": "Sonne",
+"r_cp_moon": "Mond",
+"r_cp_mercury": "Merkur",
+"r_cp_venus": "Venus",
+"r_cp_earth": "Erde",
+"r_cp_mars": "Mars",
+"r_cp_jupiter": "Jupiter",
+"r_cp_saturn": "Saturn",
+"r_cp_uranus": "Uranus",
+"r_cp_neptune": "Neptun",
+"r_cp_pluto": "Pluto",
+"r_cp_node_mean": "Mittlerer Knoten",
+"r_cp_node_true": "Wahrer Knoten",
+"r_cp_chiron": "Chiron",
+"r_cp_persephone_ram": "Persephone (Ram)",
+"r_cp_hermes_ram": "Hermes (Ram)",
+"r_cp_demeter_ram": "Demeter (Ram)",
+"r_cp_cupido_ura": "Cupido (Hamburg)",
+"r_cp_hades_ura": "Hades (Hamburg)",
+"r_cp_zeus_ura": "Zeus (Hamburg)",
+"r_cp_kronos_ura": "Kronos (Hamburg)",
+"r_cp_apollon_ura": "Apollon (Hamburg)",
+"r_cp_admetos_ura": "Admetos (Hamburg)",
+"r_cp_vulcanus_ura": "Vulcanus (Hamburg)",
+"r_cp_poseidon_ura": "Poseidon (Hamburg)",
+"r_cp_eris": "Eris",
+"r_cp_pholus": "Pholus",
+"r_cp_ceres": "Ceres",
+"r_cp_pallas": "Pallas",
+"r_cp_juno": "Juno",
+"r_cp_vesta": "Vesta",
+"r_cp_isis": "Isis",
+"r_cp_nessus": "Nessus",
+"r_cp_huya": "Huya",
+"r_cp_varuna": "Varuna",
+"r_cp_ixion": "Ixion",
+"r_cp_quaoar": "Quaoar",
+"r_cp_haumea": "Haumea",
+"r_cp_orcus": "Orcus",
+"r_cp_makemake": "Makemake",
+"r_cp_sedna": "Sedna",
+"r_cp_hygieia": "Hygieia",
+"r_cp_astraea": "Astraea",
+"r_cp_apogee_mean": "Apogäum Mittel",
+"r_cp_apogee_corrected": "Apogäum Korrigiert",
+"r_cp_apogee_interpolated": "Apogäum Interpoliert",
+"r_cp_apogee_duval": "Apogäum Korrigiert (Duval)",
+"r_cp_persephone_carteret": "Persephone (Carteret)",
+"r_cp_vulcanus_carteret": "Vulcanus (Carteret)",
+"r_cp_ascendant": "Aszendent",
+"r_cp_mc": "MC",
+"r_cp_eastpoint": "Ostpunkt",
+"r_cp_vertex": "Vertex",
+"r_hs_none" : "Keine Häuser",
+"r_hs_placidus" : "Placidus",
+"r_hs_koch" : "Koch",
+"r_hs_porphyri" : "Porphyri",
+"r_hs_regiomontanus" : "Regiomontanus",
+"r_hs_campanus" : "Campanus",
+"r_hs_alcabitius" : "Alcabitius",
+"r_hs_topocentric" : "Topozentrisch",
+"r_hs_krusinski" : "Krusinski",
+"r_hs_apc" : "APC",
+"r_hs_morin" : "Morin",
+"r_hs_wholesign" : "Ganzes Zeichen",
+"r_hs_equalasc" : "Asc. gleich",
+"r_hs_equalmc" : "MC gleich",
+"r_hs_equalaries" : "Widder gleich",
+"r_hs_vehlow" : "Vehlow",
+"r_hs_axial" : "Axial",
+"r_hs_horizon" : "Horizont",
+"r_hs_carter" : "Carter",
+"r_hs_gauquelin" : "Gauquelin",
+"r_hs_sunshine" : "Sonnenschein",
+"r_hs_sunshine_treindl" : "Sonnenschein Treindl",
+"r_hs_pullen_sd" : "Pullen SD",
+"r_hs_pullen_sr" : "Pullen SR",
+"r_hs_sripati" : "Sripati",
 "r_rr_aa" : "AA - Genau",
 "r_rr_a" : "A - Zitiert",
 "r_rr_b" : "B - (Auto)biografie",
