--- a/locales/en.json
+++ b/locales/en.json
@@ -61,6 +61,84 @@
 "r_cc_election" : "Election",
 "r_cc_other" : "Other",
 "r_cc_unknown" : "Unknown",
+"r_cp_sun": "Sun",
+"r_cp_moon": "Moon",
+"r_cp_mercury": "Mercury",
+"r_cp_venus": "Venus",
+"r_cp_earth": "Earth",
+"r_cp_mars": "Mars",
+"r_cp_jupiter": "Jupiter",
+"r_cp_saturn": "Saturn",
+"r_cp_uranus": "Uranus",
+"r_cp_neptune": "Neptune",
+"r_cp_pluto": "Pluto",
+"r_cp_node_mean": "Mean node",
+"r_cp_node_true": "True node",
+"r_cp_chiron": "Chiron",
+"r_cp_persephone_ram": "Persephone (Ram)",
+"r_cp_hermes_ram": "Hermes (Ram)",
+"r_cp_demeter_ram": "Demeter (Ram)",
+"r_cp_cupido_ura": "Cupido (Uranian)",
+"r_cp_hades_ura": "Hades (Uranian)",
+"r_cp_zeus_ura": "Zeus (Uranian)",
+"r_cp_kronos_ura": "Kronos (Uranian)",
+"r_cp_apollon_ura": "Apollon (Uranian)",
+"r_cp_admetos_ura": "Admetos (Uranian)",
+"r_cp_vulcanus_ura": "Vulcanus (Uranian)",
+"r_cp_poseidon_ura": "Poseidon (Uranian)",
+"r_cp_eris": "Eris",
+"r_cp_pholus": "Pholus",
+"r_cp_ceres": "Ceres",
+"r_cp_pallas": "Pallas",
+"r_cp_juno": "Juno",
+"r_cp_vesta": "Vesta",
+"r_cp_isis": "Isis",
+"r_cp_nessus": "Nessus",
+"r_cp_huya": "Huya",
+"r_cp_varuna": "Varuna",
+"r_cp_ixion": "Ixion",
+"r_cp_quaoar": "Quaoar",
+"r_cp_haumea": "Haumea",
+"r_cp_orcus": "Orcus",
+"r_cp_makemake": "Makemake",
+"r_cp_sedna": "Sedna",
+"r_cp_hygieia": "Hygieia",
+"r_cp_astraea": "Astraea",
+"r_cp_apogee_mean": "Mean apogee",
+"r_cp_apogee_corrected": "Corrected apogee",
+"r_cp_apogee_interpolated": "Interpolated apogee",
+"r_cp_apogee_duval": "Corrected apogee (Duval)",
+"r_cp_persephone_carteret": "Persephone (Carteret)",
+"r_cp_vulcanus_carteret": "Vulcanus (Carteret)",
+"r_cp_ascendant": "Ascendant",
+"r_cp_mc": "MC",
+"r_cp_eastpoint": "Eastpoint",
+"r_cp_vertex": "Vertex",
+"r_hs_none" : "No houses",
+"r_hs_placidus" : "Placidus",
+"r_hs_koch" : "Koch",
+"r_hs_porphyri" : "Porphyri",
+"r_hs_regiomontanus" : "Regiomontanus",
+"r_hs_campanus" : "Campanus",
+"r_hs_alcabitius" : "Alcabitius",
+"r_hs_topocentric" : "Topocentric",
+"r_hs_krusinski" : "Krusinski",
+"r_hs_apc" : "APC",
+"r_hs_morin" : "Morin",
+"r_hs_wholesign" : "Whole sign",
+"r_hs_equalasc" : "Asc. Equal",
+"r_hs_equalmc" : "MC Equal",
+"r_hs_equalaries" : "Aries Equal",
+"r_hs_vehlow" : "Vehlow",
+"r_hs_axial" : "Axial",
+"r_hs_horizon" : "Horizon",
+"r_hs_carter" : "Carter",
+"r_hs_gauquelin" : "Gauquelin",
+"r_hs_sunshine" : "SunShine",
+"r_hs_sunshine_treindl" : "SunShine Treindl",
+"r_hs_pullen_sd" : "Pullen SD",
+"r_hs_pullen_sr" : "Pullen SR",
+"r_hs_sripati" : "Sripati",
 "r_rr_aa" : "AA - Accurate",
 "r_rr_a" : "A - Quoted",
 "r_rr_b" : "B - (Auto)biography",
