--- a/locales/fr.json
+++ b/locales/fr.json
@@ -61,6 +61,84 @@
 "r_cc_election" : "Élection",
 "r_cc_other" : "Autre",
 "r_cc_unknown" : "Inconnu",
+"r_cp_sun": "Soleil",
+"r_cp_moon": "Lune",
+"r_cp_mercury": "Mercure",
+"r_cp_venus": "Vénus",
+"r_cp_earth": "Terre",
+"r_cp_mars": "Mars",
+"r_cp_jupiter": "Jupiter",
+"r_cp_saturn": "Saturne",
+"r_cp_uranus": "Uranus",
+"r_cp_neptune": "Neptune",
+"r_cp_pluto": "Pluton",
+"r_cp_node_mean": "Nœud Moyen",
+"r_cp_node_true": "Nœud Vrai",
+"r_cp_chiron": "Chiron",
+"r_cp_persephone_ram": "Perséphone (Ram)",
+"r_cp_hermes_ram": "Hermès (Ram)",
+"r_cp_demeter_ram": "Déméter (Ram)",
+"r_cp_cupido_ura": "Cupido (Uranien)",
+"r_cp_hades_ura": "Hadès (Uranien)",
+"r_cp_zeus_ura": "Zeus (Uranien)",
+"r_cp_kronos_ura": "Kronos (Uranien)",
+"r_cp_apollon_ura": "Apollon (Uranien)",
+"r_cp_admetos_ura": "Admetos (Uranien)",
+"r_cp_vulcanus_ura": "Vulcanus (Uranien)",
+"r_cp_poseidon_ura": "Poséidon (Uranien)",
+"r_cp_eris": "Éris",
+"r_cp_pholus": "Pholus",
+"r_cp_ceres": "Ceres",
+"r_cp_pallas": "Pallas",
+"r_cp_juno": "Juno",
+"r_cp_vesta": "Vesta",
+"r_cp_isis": "Isis",
+"r_cp_nessus": "Nessus",
+"r_cp_huya": "Huya",
+"r_cp_varuna": "Varuna",
+"r_cp_ixion": "Ixion",
+"r_cp_quaoar": "Quaoar",
+"r_cp_haumea": "Hauméa",
+"r_cp_orcus": "Orcus",
+"r_cp_makemake": "Makémaké",
+"r_cp_sedna": "Sedna",
+"r_cp_hygieia": "Hygieia",
+"r_cp_astraea": "Astrée",
+"r_cp_apogee_mean": "Apogée Moyen",
+"r_cp_apogee_corrected": "Apogée Corrigé",
+"r_cp_apogee_interpolated": "Apogée Interpolé",
+"r_cp_apogee_duval": "Apogée Corrigé (Duval)",
+"r_cp_persephone_carteret": "Perséphone (Carteret)",
+"r_cp_vulcanus_carteret": "Vulcanus (Carteret)",
+"r_cp_ascendant": "Ascendant",
+"r_cp_mc": "MC",
+"r_cp_eastpoint": "Point Est",
+"r_cp_vertex": "Vertex",
+"r_hs_none" : "Pas de maisons",
+"r_hs_placidus" : "Placidus",
+"r_hs_koch" : "Koch",
+"r_hs_porphyri" : "Porphyri",
+"r_hs_regiomontanus" : "Regiomontanus",
+"r_hs_campanus" : "Campanus",
+"r_hs_alcabitius" : "Alcabitius",
+"r_hs_topocentric" : "Topocentrique",
+"r_hs_krusinski" : "Krusinski",
+"r_hs_apc" : "APC",
+"r_hs_morin" : "Morin",
+"r_hs_wholesign" : "Signe Entier",
+"r_hs_equalasc" : "Asc. égal",
+"r_hs_equalmc" : "MC égal",
+"r_hs_equalaries" : "Bélier égal",
+"r_hs_vehlow" : "Vehlow",
+"r_hs_axial" : "Axial",
+"r_hs_horizon" : "Horizon",
+"r_hs_carter" : "Carter",
+"r_hs_gauquelin" : "Gauquelin",
+"r_hs_sunshine" : "Ensoleillement",
+"r_hs_sunshine_treindl" : "Ensoleillement Treindl",
+"r_hs_pullen_sd" : "Pullen SD",
+"r_hs_pullen_sr" : "Pullen SR",
+"r_hs_sripati" : "Sripati",
 "r_rr_aa" : "AA - Précis",
 "r_rr_a" : "A - Cité",
 "r_rr_b" : "B - (Auto)biographie",
