--- a/locales/nl.json
+++ b/locales/nl.json
@@ -61,6 +61,84 @@
 "r_cc_election" : "Electie",
 "r_cc_other" : "Anders",
 "r_cc_unknown" : "Onbekend",
+"r_cp_sun": "Zon",
+"r_cp_moon": "Maan",
+"r_cp_mercury": "Mercurius",
+"r_cp_venus": "Venus",
+"r_cp_earth": "Aarde",
+"r_cp_mars": "Mars",
+"r_cp_jupiter": "Jupiter",
+"r_cp_saturn": "Saturnus",
+"r_cp_uranus": "Uranus",
+"r_cp_neptune": "Neptunus",
+"r_cp_pluto": "Pluto",
+"r_cp_node_mean": "Gemiddelde knoop",
+"r_cp_node_true": "Ware knoop",
+"r_cp_chiron": "Chiron",
+"r_cp_persephone_ram": "Persephone (Ram)",
+"r_cp_hermes_ram": "Hermes (Ram)",
+"r_cp_demeter_ram": "Demeter (Ram)",
+"r_cp_cupido_ura": "Cupido (Hamburg)",
+"r_cp_hades_ura": "Hades (Hamburg)",
+"r_cp_zeus_ura": "Zeus (Hamburg)",
+"r_cp_kronos_ura": "Kronos (Hamburg)",
+"r_cp_apollon_ura": "Apollon (Hamburg)",
+"r_cp_admetos_ura": "Admetos (Hamburg)",
+"r_cp_vulcanus_ura": "Vulcanus (Hamburg)",
+"r_cp_poseidon_ura": "Poseidon (Hamburg)",
+"r_cp_eris": "Eris",
+"r_cp_pholus": "Pholus",
+"r_cp_ceres": "Ceres",
+"r_cp_pallas": "Pallas",
+"r_cp_juno": "Juno",
+"r_cp_vesta": "Vesta",
+"r_cp_isis": "Isis",
+"r_cp_nessus": "Nessus",
+"r_cp_huya": "Huya",
+"r_cp_varuna": "Varuna",
+"r_cp_ixion": "Ixion",
+"r_cp_quaoar": "Quaoar",
+"r_cp_haumea": "Haumea",
+"r_cp_orcus": "Orcus",
+"r_cp_makemake": "Makemake",
+"r_cp_sedna": "Sedna",
+"r_cp_hygieia": "Hygieia",
+"r_cp_astraea": "Astraea",
+"r_cp_apogee_mean": "Gemiddeld apogeum",
+"r_cp_apogee_corrected": "Gecorrigeerd apogeum",
+"r_cp_apogee_interpolated": "Geïnterpoleerd apogeum",
+"r_cp_apogee_duval": "Gecorrigeerd apogeum (Duval)",
+"r_cp_persephone_carteret": "Persephone (Carteret)",
+"r_cp_vulcanus_carteret": "Vulcanus (Carteret)",
+"r_cp_ascendant": "Ascendant",
+"r_cp_mc": "MC",
+"r_cp_eastpoint": "Oostpunt",
+"r_cp_vertex": "Vertex",
+"r_hs_none" : "Geen huizen",
+"r_hs_placidus" : "Placidus",
+"r_hs_koch" : "Koch",
+"r_hs_porphyri" : "Porphyrius",
+"r_hs_regiomontanus" : "Regiomontanus",
+"r_hs_campanus" : "Campanus",
+"r_hs_alcabitius" : "Alcabitius",
+"r_hs_topocentric" : "Topocentrisch",
+"r_hs_krusinski" : "Krusinski",
+"r_hs_apc" : "APC",
+"r_hs_morin" : "Morinus",
+"r_hs_wholesign" : "Hele tekens",
+"r_hs_equalasc" : "Asc. gelijk",
+"r_hs_equalmc" : "MC gelijk",
+"r_hs_equalaries" : "Ram gelijk",
+"r_hs_vehlow" : "Vehlow",
+"r_hs_axial" : "Axiaal",
+"r_hs_horizon" : "Horizon",
+"r_hs_carter" : "Carter",
+"r_hs_gauquelin" : "Gauquelin",
+"r_hs_sunshine" : "Zonneschijn",
+"r_hs_sunshine_treindl" : "Zonneschijn Treindl",
+"r_hs_pullen_sd" : "Pullen SD",
+"r_hs_pullen_sr" : "Pullen SR",
+"r_hs_sripati" : "Sripati",
 "r_r_r_aa" : "AA - Accuraat",
 "r_rr_a" : "A - Geciteerd",
 "r_rr_b" : "B - (Auto)biografie",
